<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/rosa_fondo_pantalla"

    android:orientation="vertical">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@color/transparente"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="87dp"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/nombre"
        android:layout_width="293dp"

        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/nombre"
        android:textSize="15dp"
        android:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <EditText
        android:id="@+id/apellido"
        android:layout_width="293dp"

        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/Apellido"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="284dp"

        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:hint="@string/correo"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="284dp"

        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"

        android:hint="@string/Usuario"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo" />

    <TextView
        android:id="@+id/contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/contraseña"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />

    <EditText
        android:id="@+id/campoContraseña"
        android:layout_width="301dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/astericos"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña" />

    <TextView
        android:id="@+id/repiteContraseña"
        android:layout_width="132dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:text="@string/repite_contra"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoContraseña" />

    <EditText
        android:id="@+id/campoRepiteContraseña"
        android:layout_width="288dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/astericos"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repiteContraseña" />

    <Button
        android:id="@+id/btnContinuar"
        style="@style/boton_azul"
android:padding="5dip"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="48dp"
        android:text="@string/boton_continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoRepiteContraseña"
        app:layout_constraintVertical_bias="0.534" />

    <Button
        android:id="@+id/btnVolver"
        style="@style/boton_azul"
        android:layout_marginEnd="76dp"
        android:text="@string/boton_volver"
        app:layout_constraintBottom_toBottomOf="@+id/btnContinuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoRepiteContraseña"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>