<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pantalla_cambiar_contra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambio"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="91dp" />


    <TextView
        android:id="@+id/nueva_contra"
        android:layout_width="211dp"
        android:layout_height="42dp"
        android:gravity="bottom|center|start|fill"
        android:text="@string/nueva_contraseña"
        android:textSize="15dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="161dp" />

    <Button
        android:id="@+id/button"
        style="@style/boton_tamaño_letra_alternativo"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44dp"
        android:text="@string/aceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        tools:ignore="MissingConstraints" />

    <LinearLayout

        style="@style/pop_up_link_enviado"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView8"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cambios_guardados"
            android:background="@color/transparente"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:text="@string/login"
            android:background="@color/transparente"/>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="212dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/astericos"

        android:inputType="textPassword"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="211dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repite_contra"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="290dp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/astericos"
        android:inputType="textPassword"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="326dp" />

</androidx.constraintlayout.widget.ConstraintLayout>